# EA-SEE

./: .env  README.md  class_mappings.yaml  client.py  docker-compose.yaml  pyproject.toml  start-docker.sh  start.sh
docker/: ea-see.Dockerfile
ea_see/: component.py  dataset.py  detection.py  download.py  model.py  serve.py
ea_see/recognition/: component.py  dataset.py  larger_dataset.py  model.py
scripts/: docker-install.sh  infer.sh  install.sh  train.sh
tools/: fabricate_dataset.sh  get_cuda_toolkit.sh  get_embedding_pt_weights.sh  weight_conversion.py
